--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,6 +1,9 @@
 .chart {
   width: 100%;
   height: 500px;
+  display: flex;
+    flex-direction: column;
+    align-items: center;
   /* padding: 20px; */
 }
 .main {
