--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,29 +1,68 @@
 .chart {
-  width: 100%;
-  height: 500px;
+  /* width: 100%; */
+  /* min-width: 530px; */
+  /* height: 500px; */
+  margin-left: 10px;
   display: flex;
-    flex-direction: column;
-    align-items: center;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
   /* padding: 20px; */
 }
 .main {
   width: 100%;
-  min-height : 100vh;
-  padding: 10px;
-  display: grid;
-  grid-template-columns: 20% 80%;
+  min-height: 100vh;
+  /* padding: 10px; */
+  display: flex;
+  flex-direction: row;
+  /* display: grid;
+  grid-template-columns: 20% 80%; */
   /* column-gap: 10px; */
 }
 
+.Sidebar_header {
+  background-color: #866ec7;
+}
 .Detail {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   /* justify-content: center; */
   border: 10px black;
   padding: 20px;
+  gap:20px;
 }
 
+.Detail_header {
+  display: flex;
+  /* flex-grow: 1; */
+  flex-direction: column;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.Detail_maincontent {
+  display: flex;
+  flex-direction: row;
+  gap:10px;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.table {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+}
 .table-cont {
   /* width: 80%; */
   /* padding: 20px; */
@@ -31,33 +70,53 @@
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
+
   /* text-align: left; */
 }
 
 .Sidebar {
-  padding: 10px;
-  border-radius: 5px;
-  border: 1px solid red;
+  /* padding: 10px; */
+  /* border-radius: 5px; */
+  background-color: #866ec7;
+  color: #fff;
+  /* border: 1px solid red; */
   /* border : 10px black; */
   /* margin-right: 10px black; */
   /* background-color: beige; */
 }
 
 .ExpenseSect-form {
-    /* width: 100%; */
-    min-width: 70rem;
-  display: flex;
-  /* align-items: center; */
   justify-content: space-around;
+  width: 100%;
+  /* min-width: 70rem; */
+  /* display: flex; */
+  /* flex: 1; */
+  /* align-items: center; */
+  /* justify-content: space-around; */
 }
 
-.ExpenseSect-form button{
-    margin-bottom: 20px;
+.ExpenseSect-form button {
+  margin-top: 15px;
 }
 
-.TodaysExp-det{
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: column;
+.TodaysExp-det {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  /* flex: 1; */
+  width: 100%;
+  padding-bottom: 20px;
+}
+
+.header{
+ background-color: #4c70b9;
+ color: #fff;
+ margin-bottom: 15px;
+ border-top-left-radius: 10px;
+ border-top-right-radius: 10px;
+ width: 100%;
 }
