--- a/src/components/main.css
+++ b/src/components/main.css
@@ -33,7 +33,7 @@
   /* justify-content: center; */
   border: 10px black;
   padding: 20px;
-  gap:20px;
+  gap: 20px;
 }
 
 .Detail_header {
@@ -49,9 +49,12 @@
 }
 
 .Detail_maincontent {
-  display: flex;
+  display: grid;
+  grid-auto-rows: 60% 40%;
+  grid-auto-flow: column;
+  /* display: flex; */
   flex-direction: row;
-  gap:10px;
+  gap: 10px;
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
@@ -113,11 +116,11 @@
   padding-bottom: 20px;
 }
 
-.header{
- background-color: #4c70b9;
- color: #fff;
- margin-bottom: 15px;
- border-top-left-radius: 10px;
- border-top-right-radius: 10px;
- width: 100%;
+.header {
+  background-color: #4c70b9;
+  color: #fff;
+  margin-bottom: 15px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 100%;
 }
