--- a/src/components/main.css
+++ b/src/components/main.css
@@ -124,3 +124,11 @@
   border-top-right-radius: 10px;
   width: 100%;
 }
+
+.pieCat-sel{
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  margin-right: 20px;
+
+}
