--- a/src/components/main.css
+++ b/src/components/main.css
@@ -2,7 +2,7 @@
   /* width: 100%; */
   /* min-width: 530px; */
   /* height: 500px; */
-  margin-left: 10px;
+  /* margin-left: 10px; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -49,12 +49,13 @@
 }
 
 .Detail_maincontent {
+  width: 100%;
   display: grid;
   grid-auto-columns: 60% 40%;
   grid-auto-flow: column;
   /* display: flex; */
   flex-direction: row;
-  gap: 5px;
+  gap: 10px;
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
