--- a/src/components/main.css
+++ b/src/components/main.css
@@ -34,6 +34,7 @@
   border: 10px black;
   padding: 20px;
   gap: 20px;
+  width:100%
 }
 
 .Detail_header {
@@ -138,4 +139,10 @@
   display: flex;
   justify-content: flex-end;
   margin-right: 20px;
+}
+
+.Sidebar_menu{
+  display: flex;
+  margin-top: 10px;
+  align-items: flex-start;
 }
