--- a/src/components/main.css
+++ b/src/components/main.css
@@ -13,6 +13,7 @@
 }
 .main {
   width: 100%;
+  /* height: 100vh; */
   min-height: 100vh;
   /* padding: 10px; */
   display: flex;
@@ -76,6 +77,8 @@
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
+  max-height: 410px;
+  overflow: scroll;
 
   /* text-align: left; */
 }
