--- a/src/components/main.css
+++ b/src/components/main.css
@@ -14,16 +14,19 @@
   /* padding: 20px; */
 }
 
-.Nav_bar{
+.Nav_text {
+  font-size: 5rem;
+}
+.Nav_bar {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.Detail_table{
+.Detail_table {
   height: 100%;
   display: flex;
 }
-.table_header{
+.table_header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -53,10 +56,10 @@
   border: 10px black;
   padding: 20px;
   gap: 20px;
-  width:100%
+  width: 100%;
 }
 
-.Detail_Accor{
+.Detail_Accor {
   width: 100%;
 }
 
@@ -154,45 +157,44 @@
   width: 100%;
 }
 
-.pieCat-sel{
+.pieCat-sel {
   display: flex;
   width: 100%;
   justify-content: flex-end;
   margin-right: 20px;
-
 }
 
-.table-date{
+.table-date {
   display: flex;
   justify-content: flex-end;
   margin-right: 20px;
 }
 
-.table_comments{
+.table_comments {
   font-weight: bold;
 }
 
-.Sidebar_menu{
+.Sidebar_menu {
   display: flex;
   margin-top: 10px;
   align-items: flex-start;
 }
 
-.Login{
+.Login {
   display: grid;
   grid-template-columns: 50% 50%;
   overflow: hidden;
   height: 100vh;
 }
 
-.Login_img{
+.Login_img {
   background-image: url(https://wallpaper.dog/large/826954.jpg);
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.Login_form{
+.Login_form {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -219,41 +221,40 @@ img {
   background-position: center;
 }
 
-.SignInpage-formcontent{
-    background: #f6f7fc;
-    align-items: center;
-    justify-content: center;
-    display: flex;
+.SignInpage-formcontent {
+  background: #f6f7fc;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
-.SignInpage-box{
-    padding: 30px;
-    /* padding-bottom: 30px; */
-    min-width: 700px;
-    background: #fff;
-    box-shadow: 0 15px 30px 0 rgb(0 0 0 / 20%);
+.SignInpage-box {
+  padding: 30px;
+  /* padding-bottom: 30px; */
+  min-width: 700px;
+  background: #fff;
+  box-shadow: 0 15px 30px 0 rgb(0 0 0 / 20%);
 }
 
-.SignInpage-header{
-    /* padding-top: 20px; */
-    /* padding-bottom: 50px; */
-    /* padding: 70px 0; */
-    text-align: center;
-
+.SignInpage-header {
+  /* padding-top: 20px; */
+  /* padding-bottom: 50px; */
+  /* padding: 70px 0; */
+  text-align: center;
 }
 
-.SignInpage-content{
-padding: 50px 0;
+.SignInpage-content {
+  padding: 50px 0;
 }
 
-.SignInPage-btn{
-    padding: 0 30px;
-    color: #fff;
-    background-color: #fb771a;
-    border-color: #fb771a;
+.SignInPage-btn {
+  padding: 0 30px;
+  color: #fff;
+  background-color: #fb771a;
+  border-color: #fb771a;
 }
 
-.SignInPage-btnwrp{
+.SignInPage-btnwrp {
   display: flex;
   justify-content: space-between;
   align-items: center;
