--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,3 +1,9 @@
+.App {
+  /* text-align: center; */
+  width: 100%;
+  background: #EDEDED;
+}
+
 .chart {
   /* width: 100%; */
   /* min-width: 530px; */
@@ -10,6 +16,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 5px;
+  background: #fff;
   /* margin-bottom: 1rem; */
   /* padding: 20px; */
 }
@@ -57,6 +64,7 @@
   padding: 20px;
   gap: 20px;
   width: 100%;
+  /* background: #adb5bd; */
 }
 
 .Detail_Accor {
@@ -95,6 +103,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 5px;
+  background: #fff;
   /* margin-bottom: 1rem; */
 }
 .table-cont {
