--- a/src/components/main.css
+++ b/src/components/main.css
@@ -161,7 +161,7 @@
 }
 
 .header {
-  background-color: #4c70b9;
+  background-color: #2C3333;
   color: #fff;
   margin-bottom: 15px;
   border-top-left-radius: 10px;
