--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,10 +1,10 @@
 .App {
   /* text-align: center; */
   width: 100%;
-  background: #EDEDED;
+  background: #ededed;
 }
 
-.card{
+.card {
   border-radius: 5px;
 }
 .chart {
@@ -40,6 +40,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0 10px;
 }
 .main {
   text-align: center;
@@ -161,7 +162,20 @@
 }
 
 .header {
-  background-color: #2C3333;
+  background-color: #2c3333;
+  color: #fff;
+  margin-bottom: 15px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 100%;
+}
+
+.chart-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+  align-items: center;
+  background-color: #2c3333;
   color: #fff;
   margin-bottom: 15px;
   border-top-left-radius: 10px;
@@ -270,4 +284,8 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.AddExp_modal {
+  text-align: center;
 }
